--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@react-navigation/native-stack": "^6.9.16",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
+    "africastalking": "^0.6.5",
     "expo": "~49.0.15",
     "expo-barcode-scanner": "^12.7.0",
+    "expo-image-picker": "~14.3.2",
     "expo-splash-screen": "^0.22.0",
     "expo-status-bar": "~1.6.0",
     "moment": "^2.29.4",
@@ -29,8 +31,7 @@
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.4.2",
-    "expo-image-picker": "~14.3.2"
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
