--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "africastalking": "^0.6.5",
+    "dotenv": "^16.3.1",
     "expo": "~49.0.15",
     "expo-barcode-scanner": "^12.7.0",
     "expo-image-picker": "~14.3.2",
